...
  "text_delete_mark_prompt": "Do you really want to irretrievably delete {{mark}}?",
  "text_decide_for_action": "Decide for an action",
  "user_profile_alert_text" : "Please note that all tracking data will be deleted from your phone. Currently it is not possible to restore it after logging in.",
  "user_profile_alert_label" : "Logout",

  "caption_ok": "OK",
  "caption_cancel": "Cancel",
  "caption_back": "Back",
  "caption_close": "Close",
  "caption_confirm": "Confirm",
  "caption_qr_scanner": "Scan a QR-Code",
  "caption_delete_mark_binding": "Delete binding with this device",
  "caption_start_tracking": "Start tracking",
...
  "caption_tab_trackinglist": "Tracking",
  "caption_tab_sessionsnavigator": "Events",
  "caption_tab_checkin": "Join Regatta",
  "caption_tab_account": "Account",
  "caption_tab_usersessions": "My events",
  "caption_tab_tracks": "All tracks",
  "caption_tab_inventory": "Inventory",
  "caption_tab_userprofile": "My Profile",
  "caption_tab_teamlist": "My boats",
  "caption_tab_appsettings": "Settings",
  "caption_tab_communicationssettings": "Communications",
  "caption_tab_support": "FAQ´s & Support",
  "expedition_console": "Console",
...
  "caption_beta_self_tracking": "Beta Feature",
  "text_beta_self_tracking": "The start and finish lines are set by the backend automatically. We are currently working on a user friendly editor, so that you can adjust the lines. The statistics are calculated based on these lines and can only be shown if a valid start and end line was recognized by our system.",
  "caption_race_not_started_yet": "Race not started yet",
  "caption_create": "CREATE",
  "caption_invalid_qr_code_missing_mark": "To generate the QR code for this mark, you need to first save the course \n(Find the \"Save\" option top right in previous screen).",
  "caption_scan_qr_code_for_mark_binding": "Scan this QR code with another device or use this device as a tracker",
  "caption_leave": "Are you sure?",
  "caption_dont_show_again": "Don't show again",
  "caption_unsaved_changes": "You made changes that are not saved yet.",
  "caption_overwrite_courses": "Copy course",

  "error_title": "An error occurred",
  "error_unknown" : "Oops, something went wrong here.\nPlease try again!",
...
  "text_low_point_scoring": "Low point scoring applies.",
  "text_contact_for_other_scoring": "Please contact us if you require any other scoring system.",
  "text_alert_for_start_tracking": "You really want to start tracking?\nEvent entry will be closed.",
  "text_alert_event_time": "This start time is outside the date range of the regatta/event. Do you want to change the event dates?",
  "text_user_is_competitor": "You are a competitor on this event",
  "caption_see_course": "See Course",
  "caption_define_course": "Define Course",
  "caption_set_time": "Set Time",
  "caption_race_set_time": "Set Time",
  "caption_course_not_defined": "No course yet",
  "caption_time_not_set": "No start time yet",
  "text_discard_after": "Discard after Races",
  "caption_discard_after_races": "Discard after race",
...
